# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  29 Jun 2002; Martin Schlemmer <azarah@gentoo.org> portage.py: merge in
  some of the missing ld.so.preload fixes again.

  29 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: new version
  with highly-optimized dependency calculation caching, particularly for
  portdbapi.  Includes new three-level caching portdbapi xmatch() method.
 
  27 Jun 2002; Grant Goodyear <g2boojum@gentoo.org> ebuild.sh: Added keepdir()
  function so that it no longer has to be hardcoded in ebuilds.

*portage-2.0.8 (27 Jun 2002)
 
  27 Jun 2002; Daniel Robbins <drobbins@gentoo.org> emerge: in an attempt to
  provide a predictable release of Portage, I'm reverting the "emerge
  --pretend" "fix" in Portage-2.0.6.  It ignores custom USE settings when
  calculating child deps, which makes things tricky for users.  We'll use the
  "expected" (old) behavior for now until we have a solution for this USE
  issue.
  
  27 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed handling
  of ! deps in match(), closing bug #4219.  Thanks Spidler!

  27 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: disabled USE
  regeneration on reset() for performance purposes.

*portage-2.0.7 (26 Jun 2002)

  26 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: add a friendly
  error handler for aux_get() so that flaky ebuilds don't cause it to trip up
  with a cryptic traceback; users will get a friendly error message instead.
  Also, temporarily disable keyword-based masking, since it currently slows
  down Portage by quite a bit since it causes a much greater set of ebuilds to
  be cached.

*portage-2.0.6 (25 Jun 2002)

  25 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: rewrote the
  config file code to make things more sane, consistent, and made infinite